# eta_v1

./: .gitignore  Dockerfile  README.md  docker-compose.yml  ingestion_metadata.json  main.py  pyproject.toml  requirements.txt
api/: employee_api.py  main.py
config/: config.yaml
exception/: custom_exception.py
faiss_index/: index.faiss  index.pkl
logger/: custom_logger.py
models/: models.py
notebooks/: experiments.ipynb  faiss.ipynb  faissv2.ipynb  tools.ipynb
prompts/: prompt_library.py
src/data_ingestion/: ingestion.py
src/data_retrieval/: retrieval.py
templates/: chat.html
ui/: streamlit_app.py
utils/: config_loader.py  model_loader.py
